:lipstick: fix size and overflow of messages

--- a/public/css/welcome/index.css
+++ b/public/css/welcome/index.css
@@ -42,3 +42,11 @@ dialog::backdrop {
 {
     height: 300px;
 }
+
+#messages
+{
+    min-height: 50vh;
+    max-height: 50vh;
+    overflow-y: scroll;
+    width: 90%;
+}
